--- a/index.html
+++ b/index.html
@@ -531,7 +531,8 @@
       document.querySelector('.quiz-box').style.display = 'none';
       document.getElementById('scoreBoard').style.display = 'block';
       document.getElementById('readingText').style.display = 'none';
-      document.getElementById('finalScore').textContent = toArabicNumbers(state.score);
+      document.querySelector('.counters').style.display = 'none';
+                document.getElementById('finalScore').textContent = toArabicNumbers(state.score);
       document.getElementById('totalQuestions').textContent = toArabicNumbers(state.questions.length);
     }
 
@@ -566,18 +567,18 @@
     }
 
     function togglePause() {
-  state.isPaused = !state.isPaused;
-  const pauseBtn = document.getElementById('pauseBtn');
-  if (state.isPaused) {
-    pauseBtn.textContent = 'استئناف';
-    pauseBtn.style.background = '#28a745';
-    pauseBtn.style.color = 'white';
-  } else {
-    pauseBtn.textContent = 'توقف';
-    pauseBtn.style.background = '#ffc107';
-    pauseBtn.style.color = 'black';
-  }
-}
+        state.isPaused = !state.isPaused;
+        const pauseBtn = document.getElementById('pauseBtn');
+        if (state.isPaused) {
+          pauseBtn.textContent = 'استئناف';
+          pauseBtn.style.background = '#28a745';
+          pauseBtn.style.color = 'white';
+        } else {
+          pauseBtn.textContent = 'توقف';
+          pauseBtn.style.background = '#ffc107';
+          pauseBtn.style.color = 'black';
+        }
+      }
 
     window.onload = () => {
       const readingText = document.getElementById('readingText');
