--- a/index.html
+++ b/index.html
@@ -340,8 +340,95 @@
 
         }
       </style>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
+
+<script>
+let adminPassword = "";
+fetch('config.json')
+  .then(res => res.json())
+  .then(config => {
+    adminPassword = config.adminPassword;
+  })
+  .catch(() => {
+    console.warn("تعذر تحميل ملف config.json");
+  });
+</script>
+
 </head>
 <body>
+
+<!-- ✅ شاشة البداية -->
+<div id="introScreen" style="direction: rtl; text-align: center; padding: 40px;">
+  <img alt="الشعار" style="width: 120px; margin-bottom: 20px;">
+  <h2 style="font-family: 'Tajawal'; margin-bottom: 10px;">مادة لغتي الجميلة</h2>
+  <p style="font-size: 18px; margin-bottom: 10px;">
+  <div style="margin-bottom: 20px;">
+    <input id="studentName" placeholder="الاسم الكامل" style="padding: 10px; width: 60%; font-size: 18px;" />
+  </div>
+  <div style="margin-bottom: 30px;">
+    <input id="studentId" placeholder="رقم الطالب أو الصف" style="padding: 10px; width: 60%; font-size: 18px;" />
+  </div>
+
+    اقرأ التعليمات جيدًا قبل البدء، ثم اضغط على زر "ابدأ الكويز".
+  </p>
+  <button onclick="startQuiz()" style="padding: 10px 30px; font-size: 20px;">ابدأ الكويز</button>
+</div>
+
+<script>
+function startQuiz() {
+    const name = document.getElementById('studentName').value.trim();
+    const id = document.getElementById('studentId').value.trim();
+    if (!name || !id) {
+        alert("يرجى إدخال الاسم والرقم أولاً.");
+        return;
+    }
+    state.student = { name, id, score: 0, timestamp: new Date().toLocaleString() };
+    document.getElementById('introScreen').style.display = 'none';
+    document.querySelector('.container').style.display = 'block';
+}
+</script>
+
+<script>
+
+
+function exportResults() {
+    const password = prompt("أدخل كلمة المرور لتصدير النتائج:");
+    if (password !== adminPassword) {
+        alert("كلمة المرور غير صحيحة.");
+        return;
+    }
+
+    if (results.length === 0) {
+        alert("لا توجد نتائج حالياً.");
+        return;
+    }
+
+    const worksheet = XLSX.utils.json_to_sheet(results);
+    const workbook = XLSX.utils.book_new();
+    XLSX.utils.book_append_sheet(workbook, worksheet, "نتائج الطلاب");
+
+    const wbout = XLSX.write(workbook, { bookType: "xlsx", type: "binary" });
+
+    function s2ab(s) {
+        const buf = new ArrayBuffer(s.length);
+        const view = new Uint8Array(buf);
+        for (let i = 0; i < s.length; i++) view[i] = s.charCodeAt(i) & 0xFF;
+        return buf;
+    }
+
+    const blob = new Blob([s2ab(wbout)], { type: "application/octet-stream" });
+    const link = document.createElement("a");
+    link.href = URL.createObjectURL(blob);
+    link.download = "نتائج_الطلاب.xlsx";
+    document.body.appendChild(link);
+    link.click();
+    document.body.removeChild(link);
+}
+
+
+
+</script>
+
 <button class="config-btn" onclick="toggleConfigPanel()">⚙️</button><div class="container">
 <div class="header">
 <h1 id="quizTitle">كويز الثقافة العامة 🇸🇦</h1>
@@ -376,14 +463,21 @@ const quizConfig = {
     instructions: "اختر الإجابة الصحيحة لكل سؤال قبل انتهاء الوقت"
 };
 
+
 function toggleConfigPanel() {
     const panel = document.getElementById('configPanel');
     if (panel.style.display === 'block') {
         panel.style.display = 'none';
     } else {
+        const password = prompt("أدخل كلمة المرور لفتح لوحة التحكم:");
+        if (password !== adminPassword) {
+            alert("كلمة المرور غير صحيحة.");
+            return;
+        }
         panel.style.display = 'block';
         document.getElementById('titleInput').value = quizConfig.title;
         document.getElementById('instructionsInput').value = quizConfig.instructions;
+
     }
 }
 
@@ -403,8 +497,49 @@ function saveConfig() {
 
     toggleConfigPanel();
 }
+
+
+
+function exportResults() {
+    const password = prompt("أدخل كلمة المرور لتصدير النتائج:");
+    if (password !== adminPassword) {
+        alert("كلمة المرور غير صحيحة.");
+        return;
+    }
+
+    if (results.length === 0) {
+        alert("لا توجد نتائج حالياً.");
+        return;
+    }
+
+    const worksheet = XLSX.utils.json_to_sheet(results);
+    const workbook = XLSX.utils.book_new();
+    XLSX.utils.book_append_sheet(workbook, worksheet, "نتائج الطلاب");
+
+    const wbout = XLSX.write(workbook, { bookType: "xlsx", type: "binary" });
+
+    function s2ab(s) {
+        const buf = new ArrayBuffer(s.length);
+        const view = new Uint8Array(buf);
+        for (let i = 0; i < s.length; i++) view[i] = s.charCodeAt(i) & 0xFF;
+        return buf;
+    }
+
+    const blob = new Blob([s2ab(wbout)], { type: "application/octet-stream" });
+    const link = document.createElement("a");
+    link.href = URL.createObjectURL(blob);
+    link.download = "نتائج_الطلاب.xlsx";
+    document.body.appendChild(link);
+    link.click();
+    document.body.removeChild(link);
+}
+
+
+
 </script><script>
-    const state = {
+    const results = [];
+
+const state = {
       currentQuestion: 0,
       score: 0,
       timeLeft: 30,
@@ -559,6 +694,7 @@ function saveConfig() {
     }
 
     function showResult() {
+  if (state.student) results.push({ ...state.student, score: state.score });
       document.querySelector('.quiz-box').style.display = 'none';
       document.getElementById('scoreBoard').style.display = 'block';
       document.getElementById('readingText').style.display = 'none';
@@ -615,6 +751,7 @@ function saveConfig() {
       }
 
     window.onload = () => {
+    document.querySelector('.container').style.display = 'none';
       const readingText = document.getElementById('readingText');
       if (readingText) readingText.style.display = 'none';
       fetch('questions.json')
@@ -627,7 +764,46 @@ function saveConfig() {
           console.error("فشل تحميل ملف الأسئلة", err);
         });
     }
-  </script>
+  
+
+
+function exportResults() {
+    const password = prompt("أدخل كلمة المرور لتصدير النتائج:");
+    if (password !== adminPassword) {
+        alert("كلمة المرور غير صحيحة.");
+        return;
+    }
+
+    if (results.length === 0) {
+        alert("لا توجد نتائج حالياً.");
+        return;
+    }
+
+    const worksheet = XLSX.utils.json_to_sheet(results);
+    const workbook = XLSX.utils.book_new();
+    XLSX.utils.book_append_sheet(workbook, worksheet, "نتائج الطلاب");
+
+    const wbout = XLSX.write(workbook, { bookType: "xlsx", type: "binary" });
+
+    function s2ab(s) {
+        const buf = new ArrayBuffer(s.length);
+        const view = new Uint8Array(buf);
+        for (let i = 0; i < s.length; i++) view[i] = s.charCodeAt(i) & 0xFF;
+        return buf;
+    }
+
+    const blob = new Blob([s2ab(wbout)], { type: "application/octet-stream" });
+    const link = document.createElement("a");
+    link.href = URL.createObjectURL(blob);
+    link.download = "نتائج_الطلاب.xlsx";
+    document.body.appendChild(link);
+    link.click();
+    document.body.removeChild(link);
+}
+
+
+
+</script>
 <div class="config-panel" id="configPanel">
 <h3>لوحة التحكم</h3>
 <label>عنوان الكويز:</label>
@@ -637,6 +813,9 @@ function saveConfig() {
 </div>
 <div style="margin-top: 20px; text-align: left;">
 <button class="nav-btn" onclick="saveConfig()">حفظ التعديلات</button>
+
+<button class="nav-btn" onclick="exportResults()" style="margin-top: 20px;">📥 تصدير النتائج</button>
+
 <button class="nav-btn" onclick="toggleConfigPanel()">إلغاء</button>
 </div>
 </div></body>
